<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingLeft="5dp"
              android:paddingRight="5dp"
              android:paddingTop="5dp"
              android:paddingBottom="5dp"
              android:background="@drawable/information_popup_bg"
              android:theme="@style/poupBox">

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_gravity="center_horizontal">
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_weight="0.1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/popup_x"/>
            <TextView
                    android:id="@+id/information_popup_x_tv"
                    android:layout_weight="0.2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"/>
            <TextView
                    android:layout_weight="0.2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/popup_material"/>
            <TextView
                    android:id="@+id/information_popup_material_tv"
                    android:layout_weight="0.5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_weight="0.1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/popup_y"/>
            <TextView
                    android:id="@+id/information_popup_y_tv"
                    android:layout_weight="0.2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"/>
            <TextView
                    android:layout_weight="0.2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/popup_content"/>
            <TextView
                    android:id="@+id/information_popup_content_tv"
                    android:layout_weight="0.5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </TableRow>
    </TableLayout>
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/popup_beacon"/>
        <TextView
                android:id="@+id/information_popup_signal_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>